# wazimap-uploaders

./: Dockerfile  README.md  pyproject.toml  task.py  upload.py
sources/: owid.py
uploaders/: owid.py
