[tool.poetry]
name = "adh-wazimap-uploaders"
version = "0.1.0"
description = ""
authors = ["JD Bothma <jd@openup.org.za>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.25.1"
pandas = "^1.2.4"
numpy = "^1.20.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
